<resources>
    <string name="app_name">Insight</string>
    <string name="get_location">Get Location!</string>
    <string name="camera">Camera</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome">Welcome to\nInsight</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user">Already have an account?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="terms_of_service">By signing up you have agreed to our</string>
    <string name="terms_of_use_privacy_policy"><![CDATA[Terms of Use & Privacy Policy]]></string>
    <string name="confirm_password">Confirm password</string>
    <string name="todo">TODO</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_birthdate">Enter your birthdate</string>
    <string name="about_me">ABOUT ME</string>
    <string name="gender">GENDER</string>
    <string name="birthdate">BIRTHDATE</string>
    <string name="introduction">Introduction</string>
    <string name="name">Name</string>
    <string name="e_mail">E-MAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="share_link_description">Send your shareable link to someone with a SmartPhotos account. They\'ll be able to see your image and the metadata associated with it.</string>
    <string name="share">SHARE</string>
    <string name="copy">COPY</string>
    <string name="share_image">Share Image</string>
    <string name="about_image">About This Photo</string>
    <string name="share_info">This image was taken:</string>
    <string name="view_image">View Image</string>
    <string name="shared_image">Shared Image</string>
    <string name="user_name">Name</string>
    <string name="user_password">PASSWORD</string>
    <string name="dont_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="generate">generate</string>
    <string name="generate_link">Generate Link</string>
    <string name="hours_valid">Number of hours the link will be valid for:</string>
    <string name="default_hours">24</string>
    <string name="error">Something Went Wrong</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="acceleration">Acceleration</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="metadata">Metadata</string>
    <string name="location">Location</string>
    <string name="image_location">Image Location</string>
    <string name="my_photos">My Photos</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="owner">Owner</string>
    <string name="birthday">Birthday</string>
    <string name="date">Date</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="developers_list">-  Benjamin Gane\n\n-  Jermaine Janszen\n\n-  Abraham Elias\n\n-  Presley Liauw\n\n-  Xiaoxiang (William) Wu\n\n-  Naixin (Jane) Li</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_content">
        <big>Privacy Policy for Riddles Tech</big>
\n\n
        <p>At Insight,  one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Insight and how we use it.</p>

        <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>

        <p>This Privacy Policy applies only to our online activities and is valid for visitors to our application with regards to the information that they shared and/or collect in Insight. This policy is not applicable to any information collected offline or via channels other than this application. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicygenerator.info">Privacy Policy Generator</a> and the <a href="https://www.privacypolicies.com/privacy-policy-generator/">Free Privacy Policy Generator</a>.</p>
\n\n
        <b>Consent</b>
\n
        <p>By using our app, you hereby consent to our Privacy Policy and agree to its terms. For our Terms and Conditions, please visit the <a href="https://www.privacypolicyonline.com/terms-conditions-generator/">Terms &amp; Conditions Generator</a>.</p>
\n\n
        <b>Information we collect</b>
\n
        <p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.</p>
        <p>If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.</p>
        <p>When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.</p>
\n\n
        <b>How we use your information</b>
\n
        <p>We use the information we collect in various ways, including to:</p>\n

        <p>- Provide, operate, and maintain our app</p>\n
        <p>- Improve, personalize, and expand our app</p>\n
        <p>- Understand and analyze how you use our app</p>\n
        <p>- Develop new products, services, features, and functionality</p>\n
        <p>- Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the app, and for marketing and promotional purposes</p>\n
        <p>- Send you emails</p>\n
        <p>- Find and prevent fraud</p>
\n\n
        <b>Third Party Privacy Policies</b>
\n
        <p>Insight\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>

\n\n
        <b>CCPA Privacy Rights (Do Not Sell My Personal Information)</b>
\n
        <p>Under the CCPA, among other rights, California consumers have the right to:</p>
        <p>Request that a business that collects a consumer\'s personal data disclose the categories and specific pieces of personal data that a business has collected about consumers.</p>
        <p>Request that a business delete any personal data about the consumer that a business has collected.</p>
        <p>Request that a business that sells a consumer\'s personal data, not sell the consumer\'s personal data.</p>
        <p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.</p>
\n\n
        <b>GDPR Data Protection Rights</b>
\n
        <p>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p>\n
        <p>The right to access – You have the right to request copies of your personal data. We may charge you a small fee for this service.</p>\n
        <p>The right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete.</p>\n
        <p>The right to erasure – You have the right to request that we erase your personal data, under certain conditions.</p>\n
        <p>The right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions.</p>\n
        <p>The right to object to processing – You have the right to object to our processing of your personal data, under certain conditions.</p>\n
        <p>The right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions.</p>\n
        <p>If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us.</p>
\n\n
        <b>Children\'s Information</b>
\n
        <p>Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.</p>

        <p>Insight does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our app, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
    </string>
</resources>