<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    android:id="@+id/activity_welcome">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/welcome"
        android:fontFamily="@font/lato"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:onClick="onSignupButtonClick"
        android:layout_above="@id/existing_user_button"
        android:layout_centerHorizontal="true"
        android:shadowRadius="200"
        android:fontFamily="@font/lato"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="25dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/existing_user_button"
        android:textColor="#aaa69d"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="onExistingUserButtonClick"
        android:layout_marginBottom="50dp"
        android:text="@string/existing_user"
        android:fontFamily="@font/lato"
        />


</RelativeLayout>