<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/generate_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/button_back_generate_page"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:background="@drawable/ic_baseline_clear_24"
            android:backgroundTint="#FCBCB9B9"
            android:onClick="onBackButtonClick"
            android:layout_marginStart="18dp" />

        <TextView
            android:id="@+id/generate_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/generate_hours_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours_valid"
        android:layout_below="@id/generate_top_bar"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/generate_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:text="@string/default_hours"
        android:textAlignment="center"
        android:inputType="number"
        android:defaultFocusHighlightEnabled="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/generate_hours_label"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingHorizontal="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="12dp"
        android:layout_below="@+id/generate_hours"
        android:background="@drawable/purple_button"
        android:text="@string/generate"
        android:onClick="onClickGenerate"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/generate_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="2dp" />

</RelativeLayout>